--- a/css/style.css
+++ b/css/style.css
@@ -118,12 +118,15 @@ header {
     text-align: center;
     box-shadow: 0 2px 10px var(--shadow);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dark-mode-toggle {
     position: absolute;
     top: 1rem;
-    right: 1rem;
+    left: 1rem;
     background: transparent;
     border: none;
     color: var(--text-header);
@@ -652,6 +655,7 @@ ul {
     #app {
         margin: 0;
         max-width: 100%;
+        height: 100vh;
         box-shadow: none;
         border-radius: 0;
     }
@@ -881,8 +885,8 @@ ul {
 
     .dark-mode-toggle {
         position: absolute;
-        top: 0.5rem;
-        right: 1rem;
+        top: -2.5rem;
+        left: 1rem;
         font-size: 1.5rem;
         padding: 0.5rem;
         width: 2.5rem;
